Fixing Wrap issue

--- a/css/style.css
+++ b/css/style.css
@@ -99,3 +99,9 @@ code {
 #faq-link a:focus {
 	text-decoration: none;
 }
+
+.wrap {
+	text-overflow: ellipsis;
+    overflow: hidden;
+    display: block;
+}
